// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterTab component when offline matches the snapshot 1`] = `
<body>
  .c0 {
  font-size: 14px;
  font-weight: 500;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .cluster-tab-wrapper {
  padding: 0.5em 0.75em;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0px 0px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 10px;
  background-color: #FFFFFF;
  color: #73848C;
}

.c0 .cluster-tab-wrapper:hover {
  background-color: #F1F2F3;
  color: #73848C;
}

.c0 .cluster-tab-wrapper .cluster-tab-l {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
}

<div>
    <li
      class="c0"
    >
      <div
        class="cluster-tab-wrapper"
      >
        <div
          class="cluster-tab-l"
        >
          <svg
            fill="none"
            height="4"
            viewBox="0 0 4 4"
            width="4"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="2"
              cy="2"
              fill="#E51A1A"
              r="2"
            />
          </svg>
        </div>
        <svg
          class="cluster-tab-chevron"
          fill="none"
          height="6"
          viewBox="0 0 10 6"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1 1L5 5L9 1"
            stroke="#73848C"
          />
        </svg>
      </div>
    </li>
  </div>
</body>
`;

exports[`ClusterTab component when online matches the snapshot 1`] = `
.c0 {
  font-size: 14px;
  font-weight: 500;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .cluster-tab-wrapper {
  padding: 0.5em 0.75em;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0px 0px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 10px;
  background-color: #FFFFFF;
  color: #73848C;
}

.c0 .cluster-tab-wrapper:hover {
  background-color: #F1F2F3;
  color: #73848C;
}

.c0 .cluster-tab-wrapper .cluster-tab-l {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 10px;
}

<body>
  <div>
    <li
      class="c0"
    >
      <div
        class="cluster-tab-wrapper"
      >
        <div
          class="cluster-tab-l"
        >
          <svg
            fill="none"
            height="4"
            viewBox="0 0 4 4"
            width="4"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="2"
              cy="2"
              fill="#5CD685"
              r="2"
            />
          </svg>
        </div>
        <svg
          class="cluster-tab-chevron"
          fill="none"
          height="6"
          viewBox="0 0 10 6"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.99988 5L4.99988 1L0.999878 5"
            stroke="#73848C"
          />
        </svg>
      </div>
    </li>
  </div>
</body>
`;
